@@ -1,3 +1,9 @@
+2009-06-28  Brian Gough  <bjg@network-theory.co.uk>
+
+	* lu.c (gsl_linalg_LU_solve, gsl_linalg_LU_svx,
+	gsl_linalg_LU_refine, gsl_linalg_LU_invert, singular): added check
+	for singular matrix
+
 2009-06-04  Brian Gough  <bjg@network-theory.co.uk>
 
 	* hermtd.c (gsl_linalg_hermtd_unpack): use U as matrix name
