@@ -1,5 +1,9 @@
 * What is new in gsl-1.12+:
 
+** The functions gsl_linalg_LU_solve, gsl_linalg_LU_svx,
+   gsl_linalg_LU_refine and gsl_linalg_LU_invert, now return an error
+   for singular matrice.
+
 ** The multifit LMDER hybrid solvers now check the return code of the
    user-supplied function in the gsl_multifit_fdfsolver_set method.
 
